# google-authenticator

./: index.html  package.json  pnpm-lock.yaml
src/: App.tsx  style.scss
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/data/: database.db  database_dev.db
src-tauri/entity/: Cargo.toml
src-tauri/entity/src/: lib.rs  prelude.rs  profile.rs
src-tauri/migration/src/: lib.rs  m20220101_000001_profile_table.rs
src-tauri/src/: error.rs  main.rs  prelude.rs
src-tauri/src/ipc/: add_profile.rs  delete_profile.rs  get_profiles.rs  get_token.rs  mod.rs
src/components/: Ifrender.tsx  Loading.tsx  Profilecard.tsx
src/ipc/: sendQuery.ts
src/sections/: ProfileList.tsx  ProfileListTopMenu.tsx
src/views/: About.tsx  AddProfile.tsx  Home.tsx
src/window/: Button.tsx  Titlebar.tsx
